--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ button {
 }
 
 .item-nav-link {
+  position: relative;
   display: block;
   padding: 24px 0;
   font-weight: 500;
@@ -96,6 +97,37 @@ button {
 .item-nav-link:hover,
 .item-nav-link:focus {
   color: #404bbf;
+}
+
+.current{
+  color: #404bbf;
+}
+
+.current::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
+}
+
+.icon-list {
+ border: 1px solid #8e8f99;
+border-radius: 4px;
+width: 100%;
+height: 112px;
+background: #f4f4fd;
+margin-bottom: 8px;
+}
+.icon-lin {
+  display: block;
+  padding: 21px 100px;
+
+}
+.icon {
 }
 .header-address {
   font-style: normal;
@@ -119,9 +151,14 @@ button {
 
 /* #region hero */
 .hero {
+  margin: 0 auto;
+  max-width: 1440px;
   background-color: #2e2f42;
   padding-bottom: 188px;
   padding-top: 188px;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .hero-title {
