--- a/css/styles.css
+++ b/css/styles.css
@@ -114,21 +114,6 @@ button {
   background-color: #404bbf;
 }
 
-.icon-list {
- border: 1px solid #8e8f99;
-border-radius: 4px;
-width: 100%;
-height: 112px;
-background: #f4f4fd;
-margin-bottom: 8px;
-}
-.icon-lin {
-  display: block;
-  padding: 21px 100px;
-
-}
-.icon {
-}
 .header-address {
   font-style: normal;
   margin-left: auto;
@@ -219,6 +204,20 @@ margin-bottom: 8px;
 width: calc((100% - 72px) / 4); 
 }
 
+.icon-list {
+ border: 1px solid #8e8f99;
+border-radius: 4px;
+width: 100%;
+height: 112px;
+background: #f4f4fd;
+margin-bottom: 8px;
+}
+.icon-lin {
+  display: block;
+  padding: 21px 100px;
+
+}
+
 .benefits-item-title {
   margin-bottom: 8px;
   font-weight: 500;
@@ -245,6 +244,25 @@ width: calc((100% - 72px) / 4);
 .workers-list{
   display: flex;
   gap: 24px;
+}
+
+.workers-link {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8px;
+  margin-bottom: 0 16px;
+  width: calc((100% - 24 * 3) / 4);
+}
+.workers-social-icon {
+}
+.workers-icon-lin {
+   display: flex;
+justify-content: center;
+align-items: center;
+}
+.workers-icon {
 }
 
 .workers-title {
@@ -313,7 +331,43 @@ width: calc((100% - 72px) / 4);
 
 .portfolio-list-item{
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-list-item:hover .overlay {
+    transform: translateY(0%);
+    opacity: 1;
+}
+
+.portfolio-list-item:hover{
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-info{
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    padding: 40px 32px;
+    transform: translateY(100%);
+    opacity: 0;
+}
+
 
 .portfolio-list-title {
   margin-bottom: 8px;
@@ -345,6 +399,7 @@ width: calc((100% - 72px) / 4);
   font-family: "Raleway", sans-serif;
   padding: 100px 0;
 }
+
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -370,5 +425,23 @@ width: calc((100% - 72px) / 4);
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+
+.social-link {
+}
+.social-link-items {
+}
+.social-items {
+}
+.social-icon-lin {
+}
+.social-items-text {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+}
+.social-icon {
 }
 /*#end footer*/
