--- a/css/styles.css
+++ b/css/styles.css
@@ -258,15 +258,25 @@ margin-bottom: 8px;
   margin-top: 8px;
   margin-bottom: 0 16px;
   width: calc((100% - 24 * 3) / 4);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .workers-social-icon {
 }
 .workers-icon-lin {
-   display: flex;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;
 justify-content: center;
 align-items: center;
 }
+
+.workers-icon-lin:hover,
+.workers-icon-lin:focus{
+  background-color: #404bbf;
+  background-color: #404bbf;
+}
 .workers-icon {
+fill: #f4f4fd;
 }
 
 .workers-title {
@@ -285,6 +295,7 @@ align-items: center;
   border-radius: 0px 0px 4px 4px;
   calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .workers-list-title {
   margin-bottom: 8px;
