--- a/css/styles.css
+++ b/css/styles.css
@@ -444,6 +444,9 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
+.footer-sublogo{
+ margin-right: 120px; 
+}
 
 .social-link {
   display: flex;
@@ -462,6 +465,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #fff;
+margin-bottom: 16px;
 }
 .social-icon {
 }
