--- a/css/styles.css
+++ b/css/styles.css
@@ -452,13 +452,32 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
   display: flex;
   align-items: baseline;
   margin-right: 120px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link-items {
+  display: flex;
+  gap: 16px;
 }
 .social-items {
+  width: 40px;
+  height: 40px;
 }
 .social-icon-lin {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.social-icon-lin:hover,
+.social-icon-lin:focus{
+  background-color: #31d0aa;
+  background-color: #31d0aa;
+}
+
 .social-items-text {
 font-weight: 500;
 font-size: 16px;
