--- a/css/styles.css
+++ b/css/styles.css
@@ -450,6 +450,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
   color: #f4f4fd;
 }
 .footer-sublogo{
+  margin-right: 120px;
 }
 
 .social-link {
